# Vala-Server

./: AUTHORS  CMakeLists.txt  PROTOCOL  README.md  index.html  params.json  valadoc.sh
atk/: Atk.Action.do_action.html  Atk.Action.get_description.html  Atk.Action.get_keybinding.html  Atk.Action.get_localized_name.html  Atk.Action.get_n_actions.html  Atk.Action.get_name.html  Atk.Action.html  Atk.Action.set_description.html  Atk.Attribute.html  Atk.Attribute.name.html  Atk.Attribute.value.html  Atk.AttributeSet.html  Atk.BINARY_AGE.html  Atk.Component.add_focus_handler.html  Atk.Component.bounds_changed.html  Atk.Component.contains.html  Atk.Component.get_alpha.html  Atk.Component.get_extents.html  Atk.Component.get_layer.html  Atk.Component.get_mdi_zorder.html  Atk.Component.get_position.html  Atk.Component.get_size.html  Atk.Component.grab_focus.html  Atk.Component.html  Atk.Component.ref_accessible_at_point.html  Atk.Component.remove_focus_handler.html  Atk.Component.set_extents.html  Atk.Component.set_position.html  Atk.Component.set_size.html  Atk.CoordType.SCREEN.html  Atk.CoordType.WINDOW.html  Atk.CoordType.html  Atk.Document.get_attribute_value.html  Atk.Document.get_attributes.html  Atk.Document.get_current_page_number.html  Atk.Document.get_document.html  Atk.Document.get_document_locale.html  Atk.Document.get_document_type.html  Atk.Document.get_locale.html  Atk.Document.get_page_count.html  (+656 more)
cairo/: Cairo.Antialias.BEST.html  Cairo.Antialias.DEFAULT.html  Cairo.Antialias.FAST.html  Cairo.Antialias.GOOD.html  Cairo.Antialias.GRAY.html  Cairo.Antialias.NONE.html  Cairo.Antialias.SUBPIXEL.html  Cairo.Antialias.html  Cairo.Content.ALPHA.html  Cairo.Content.COLOR.html  Cairo.Content.COLOR_ALPHA.html  Cairo.Content.html  Cairo.Context.Context.html  Cairo.Context.append_path.html  Cairo.Context.arc.html  Cairo.Context.arc_negative.html  Cairo.Context.clip.html  Cairo.Context.clip_extents.html  Cairo.Context.clip_preserve.html  Cairo.Context.close_path.html  Cairo.Context.copy_clip_rectangle_list.html  Cairo.Context.copy_page.html  Cairo.Context.copy_path.html  Cairo.Context.copy_path_flat.html  Cairo.Context.curve_to.html  Cairo.Context.device_to_user.html  Cairo.Context.device_to_user_distance.html  Cairo.Context.fill.html  Cairo.Context.fill_extents.html  Cairo.Context.fill_preserve.html  Cairo.Context.font_extents.html  Cairo.Context.get_antialias.html  Cairo.Context.get_current_point.html  Cairo.Context.get_dash.html  Cairo.Context.get_dash_count.html  Cairo.Context.get_fill_rule.html  Cairo.Context.get_font_face.html  Cairo.Context.get_font_matrix.html  Cairo.Context.get_font_options.html  Cairo.Context.get_group_target.html  (+598 more)
drop-1.0/: Drop.ClientState.AWAITING_CONFIRMATION.html  Drop.ClientState.CANCELED.html  Drop.ClientState.FAILURE.html  Drop.ClientState.FINISHED.html  Drop.ClientState.LOADING_FILES.html  Drop.ClientState.REJECTED.html  Drop.ClientState.SENDING_DATA.html  Drop.ClientState.SENDING_INITIALISATION.html  Drop.ClientState.SENDING_REQUEST.html  Drop.ClientState.html  Drop.IncomingFileRequest.accepted.html  Drop.IncomingFileRequest.html  Drop.IncomingFileRequest.id.html  Drop.IncomingFileRequest.name.html  Drop.IncomingFileRequest.size.html  Drop.IncomingTransmission.IncomingTransmission.html  Drop.IncomingTransmission.accept_transmission.html  Drop.IncomingTransmission.cancel.html  Drop.IncomingTransmission.file_received.html  Drop.IncomingTransmission.get_client_name.html  Drop.IncomingTransmission.get_client_version.html  Drop.IncomingTransmission.get_file_requests.html  Drop.IncomingTransmission.get_is_secure.html  Drop.IncomingTransmission.get_state.html  Drop.IncomingTransmission.html  Drop.IncomingTransmission.interface_path.html  Drop.IncomingTransmission.progress_changed.html  Drop.IncomingTransmission.protocol_failed.html  Drop.IncomingTransmission.reject_transmission.html  Drop.IncomingTransmission.state_changed.html  Drop.OutgoingFileRequest.accepted.html  Drop.OutgoingFileRequest.filename.html  Drop.OutgoingFileRequest.html  Drop.OutgoingFileRequest.id.html  Drop.OutgoingFileRequest.name.html  Drop.OutgoingFileRequest.size.html  Drop.OutgoingTransmission.OutgoingTransmission.html  Drop.OutgoingTransmission.cancel.html  Drop.OutgoingTransmission.file_sent.html  Drop.OutgoingTransmission.get_file_requests.html  (+84 more)
drop-dialog/: Application.vala  CMakeLists.txt  MainWindow.vala  config.vala  config.vala.cmake
dropd/: Application.vala  CMakeLists.txt  config.vala  config.vala.cmake
dropd/Backend/: DBusInterface.vala  IncomingTransmission.vala  OutgoingTransmission.vala  ProtocolImplementation.vala  Server.vala  ServerPort.vala  ServiceBrowser.vala  ServiceProvider.vala  SettingsManager.vala  Utils.vala
gdk-3.0/: Gdk.AppLaunchContext.AppLaunchContext.html  Gdk.AppLaunchContext.display.html  Gdk.AppLaunchContext.html  Gdk.AppLaunchContext.set_desktop.html  Gdk.AppLaunchContext.set_display.html  Gdk.AppLaunchContext.set_icon.html  Gdk.AppLaunchContext.set_icon_name.html  Gdk.AppLaunchContext.set_screen.html  Gdk.AppLaunchContext.set_timestamp.html  Gdk.Atom.NONE.html  Gdk.Atom.html  Gdk.Atom.intern.html  Gdk.Atom.intern_static_string.html  Gdk.Atom.name.html  Gdk.AxisUse.IGNORE.html  Gdk.AxisUse.LAST.html  Gdk.AxisUse.PRESSURE.html  Gdk.AxisUse.WHEEL.html  Gdk.AxisUse.X.html  Gdk.AxisUse.XTILT.html  Gdk.AxisUse.Y.html  Gdk.AxisUse.YTILT.html  Gdk.AxisUse.html  Gdk.BUTTON_MIDDLE.html  Gdk.BUTTON_PRIMARY.html  Gdk.BUTTON_SECONDARY.html  Gdk.ByteOrder.LSB_FIRST.html  Gdk.ByteOrder.MSB_FIRST.html  Gdk.ByteOrder.html  Gdk.CURRENT_TIME.html  Gdk.Color.blue.html  Gdk.Color.copy.html  Gdk.Color.equal.html  Gdk.Color.free.html  Gdk.Color.green.html  Gdk.Color.hash.html  Gdk.Color.html  (+3517 more)
lib/: CMakeLists.txt  IncomingTransmission.vala  Interfaces.vala  OutgoingTransmission.vala  Session.vala  Settings.vala  drop-1.0.deps  drop.pc.cmake
lib/Widgets/: IncomingTransmissionList.vala  IncomingTransmissionListEntry.vala  OutgoingTransmissionList.vala  OutgoingTransmissionListEntry.vala  PartnerList.vala  PartnerListEntry.vala  TransmissionListEntry.vala
(+14669 files in other folders)
